added email sender

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SendGridKey": "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"
+  
 }
