--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ToDo_Web_App-1c54baa4-6e5d-4e38-9fc6-ea487f62a139;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-598P72GI\\MSSQLLOCALDB;Database=aspnet-ToDo_Web_App-1c54baa4-6e5d-4e38-9fc6-ea487f62a139;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -8,7 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
   
 
